# matrix-processor

./: README.MD  requirements.txt  setup.cfg
src/matrix/: menu.py  processor.py  transposer.py
src/matrix_processor.egg-info/: PKG-INFO  SOURCES.txt
test/: test_processor.py
