[metadata]
name = matrix-processor
version = 3.11.6
packages = []
url =
license =
author = jwisskirchen
author_email =
description = Jetbrains academy Practicing Algorithms with Python track project.

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src